--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -135,6 +135,7 @@
     color: #131313;
     font-weight: 600;
     font-size: 12px;
+    font-family: var(--primary-font);
     line-height: 1.2;
     text-align: center;
     background-color: #F8D24E;
