--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,34 +1,32 @@
 <!--MODAL OUR LOCATION  -->
 
-<div class="overlay js-overlay-modal">
-  <div class="modal-location" data-modal="4">
-    <button class="modal-btn-location" data-modal-close type="button">
-      <svg class="modal-icon-close" width="24" height="24">
-        <use href="./images/sprite.svg#icon-close-line"></use>
-      </svg>
-    </button>
-    <h2 class="modal-location-title">Our Locations</h2>
-    <div class="modal-map">
-      <iframe
-        class="map"
-        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d35551.31948590221!2d34.52174645519094!3d49.60251665919077!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sua!4v1674135806729!5m2!1sen!2sua"
-        width="448"
-        height="260"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </div>
-
-    <form
-      class="form-location"
-      action="https://www.google.com.ua/maps/place/%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D0%B0,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+36000/@49.6021346,34.4871991,12z/data=!3m1!4b1!4m5!3m4!1s0x40d825e425e6ba6b:0xcf3e6bdfb9e4ca82!8m2!3d49.588267!4d34.5514169?hl=ru"
-      target="_blank"
-    >
-      <button class="btn-location">Open map</button>
-    </form>
+<div class="modal-location" data-modal="4">
+  <button class="modal modal-btn-location" data-modal-close type="button">
+    <svg class="modal-icon-close" width="24" height="24">
+      <use href="./images/sprite.svg#icon-close-line"></use>
+    </svg>
+  </button>
+  <h2 class="modal-location-title">Our Locations</h2>
+  <div class="modal-map">
+    <iframe
+      class="map"
+      src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d35551.31948590221!2d34.52174645519094!3d49.60251665919077!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sua!4v1674135806729!5m2!1sen!2sua"
+      width="448"
+      height="260"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
   </div>
+
+  <form
+    class="form-location"
+    action="https://www.google.com.ua/maps/place/%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D0%B0,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+36000/@49.6021346,34.4871991,12z/data=!3m1!4b1!4m5!3m4!1s0x40d825e425e6ba6b:0xcf3e6bdfb9e4ca82!8m2!3d49.588267!4d34.5514169?hl=ru"
+    target="_blank"
+  >
+    <button class="btn-location">Open map</button>
+  </form>
 </div>
 
 <div class="overlay js-overlay-modal"></div>
