--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -92,7 +92,6 @@
 
 @media screen and (min-width: 768px) {
   .advantages {
-    // padding: 0 125px;
     padding-bottom: 60px;
   }
 
@@ -102,6 +101,7 @@
   }
 
   .adv-figure-text {
+    width: 152px;
     font-weight: 400;
     font-size: 14px;
     line-height: 174%;
