--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,7 +1,7 @@
 /*MODAL OUR LOCATION*/
 
 /* style overlay*/
-/*.overlay {
+.overlay {
     opacity: 0;
     visibility: hidden;
 
@@ -15,7 +15,7 @@
     transition: opacity var(--transition-dur-and-timing-fun);
     -webkit-transition: opacity var(--transition-dur-and-timing-fun);
     -moz-transition: opacity var(--transition-dur-and-timing-fun);
-}*/
+}
 
 .modal-location {
     display: flex;
@@ -48,12 +48,12 @@
     }
 }
 
-/*.modal.active,
+.modal.active,
 .overlay.active {
     opacity: 1;
     visibility: visible;
 }
-*/
+
 .modal-location-title {
     color: #131313;
     font-family: var(--secondary-font);
