--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
 <!--MODAL OUR LOCATION  -->
 
-<div class="modal-location" data-modal="4">
-  <button class="modal modal-btn-location" data-modal-close type="button">
+<div class="modal modal-location" data-modal="4">
+  <button class="modal-btn-location" data-modal-close type="button">
     <svg class="modal-icon-close" width="24" height="24">
       <use href="./images/sprite.svg#icon-close-line"></use>
     </svg>
