--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -20,13 +20,13 @@
 .modal-location {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: auto;
-    z-index: 30;
+    z-index: 530;
     background-color: #fff;
     border: 2px solid rgba(248, 210, 78, 1);
     border-radius: 10px;
