--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -146,57 +146,20 @@
     border-radius: 24px;
   }
 }
-
-//   .swiper {
-//     width: 100%;
-//     height: 100%;
-//     border-radius: 25px;
-// }
-
-// .gallery-swiper-slide {
-//     text-align: center;
-//     font-size: 18px;
-//     background: rgba(0, 0, 0, 0);
-
-//     /* Center slide text vertically */
-//     display: -webkit-box;
-//     display: -ms-flexbox;
-//     display: -webkit-flex;
-//     display: flex;
-//     -webkit-box-pack: center;
-//     -ms-flex-pack: center;
-//     -webkit-justify-content: center;
-//     justify-content: center;
-//     -webkit-box-align: center;
-//     -ms-flex-align: center;
-//     -webkit-align-items: center;
-//     align-items: center;
-// }
-
-// .gallery-swiper-slide {
-// display: block;
-// min-width: 280px;
-// min-height: 130px;
-// object-fit: cover;
-// }
-
 .swiper {
   width: 100%;
   height: 100%;
   border-radius: 25px;
 }
-
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  
 }
-
-// .swiper-slide img {
-//   // display: block;
-//   // width: 100%;
-//   display: block;
-//   min-width: 280px;
-//   min-height: 130px;
-//   object-fit: cover;
-// }
+.swiper-pagination {
+  display: flex;
+  gap: 18px;
+  justify-content: center;
+}
+.swiper-pagination-bullet-active {
+  background-color: #84a178;
+}
