--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -1,4 +1,4 @@
-<div class="overlay js-overlay-modal">
+<!--<div class="overlay js-overlay-modal">
   <div class="modal-franchise" data-modal="5">
     <button type="button" class="modal-close-btn js-modal-close">
       <svg class="modal-close-btn-icon">
@@ -17,7 +17,7 @@
       information. We appreciate your patience.
     </p>
 
-    <!-- Form modal -->
+    Form modal 
     <h2 class="visually-hidden">Order form</h2>
     <form class="modal-send-form">
       <label class="modal-send-form-label">
@@ -63,4 +63,4 @@
       <button type="submit" class="btn-franchise">Submit</button>
     </form>
   </div>
-</div>
+</div>-->
