--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,5 +1,22 @@
 
+/*MODAL FRANCHISE*/
+
 /* style overlay*/
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+
 .overlay {
     opacity: 0;
     visibility: hidden;
@@ -17,7 +34,7 @@
 }
 
 .modal-franchise {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
