--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
 <!--MODAL FRANCHISE-->
 
-<div class="modal modal-franchise" data-modal="5">
+<!--<div class="modal modal-franchise" data-modal="5">
   <button type="button" class="modal-close-btn js-modal-close">
     <svg class="modal-close-btn-icon">
       <use href="./images/sprite.svg#icon-close-line"></use>
@@ -18,7 +18,7 @@
     We appreciate your patience.
   </p>
 
-  <!-- Form modal -->
+   Form modal 
   <h2 class="visually-hidden">Order form</h2>
   <form class="modal-send-form">
     <label class="modal-send-form-label">
@@ -64,4 +64,4 @@
     <button type="submit" class="btn-franchise">Submit</button>
   </form>
 </div>
-<div class="overlay js-overlay-modal"></div>
+<div class="overlay js-overlay-modal"></div>-->
