--- a/src/sass/_modal-franchise.scss
+++ b/src/sass/_modal-franchise.scss
@@ -1,33 +1,9 @@
-/*:root {
-  --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.container {
-  min-width: 320px;
-}
-
-@media screen and (max-width: 767px) {
-  .container {
-    max-width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
-  }
-}
 
 
 
 /* style overlay*/
-/*.overlay {
+.overlay {
     opacity: 0;
     visibility: hidden;
 
@@ -44,7 +20,7 @@
 }
 
 .modal-franchise {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -237,4 +213,4 @@
    
    
   }
-}*/
+}
