--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -3,7 +3,7 @@
 
 /* style overlay*/
 
-.visually-hidden {
+/*.visually-hidden {
     position: absolute;
     white-space: nowrap;
     width: 1px;
@@ -18,7 +18,7 @@
 
 
 .overlay {
-    opacity: 0;
+    opacity: 1;
     visibility: hidden;
 
     position: fixed;
@@ -227,4 +227,4 @@
 
 
     }
-}
+}*/
