--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,4 +18,4 @@
 @import './modal-product-card';
 @import './modal-read-more';
 @import './modal-our-location';
-@import './modal-franchise';
+/*@import './modal-franchise';*/
