--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -38,7 +38,7 @@ img {
     width: 480px;
     margin: 0 auto;
     padding: 0 20px;
-    background-color: #84A178;
+    // background-color: #84A178;
 
 @media screen and (max-width: 479px) {
     width: 100%;
@@ -52,4 +52,5 @@ img {
 @media screen and (min-width: 1200px) {
     width: 1200px;
     padding: 0 16px;
-}}
+}
+}
