--- a/src/sass/_modal-all.scss
+++ b/src/sass/_modal-all.scss
@@ -24,11 +24,13 @@
   position: fixed;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
   background-color: rgba(0, 0, 0, .5);
   z-index: 520;
-  // transition: 1.3s all;
+  
   transition: opacity var(--transition-dur-and-timing-fun);
   -webkit-transition: opacity var(--transition-dur-and-timing-fun);
   -moz-transition: opacity var(--transition-dur-and-timing-fun);
@@ -38,24 +40,16 @@
 .modal {
   opacity: 0;
   visibility: hidden;
-  /*  Установаем ширину окна  */
   width: 100%;
-  
-  /*  Центрируем и задаем z-index */
+
   position: fixed;
   top: 50%;
   left: 50%;
+
   transform: translate(-50%, -50%);
   z-index: 530;
-  /* Должен быть выше чем у подложки*/
-
-  /*  Побочные стили   */
-  // box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
+  
   text-align: center;
-  // padding: 30px;
-  // border-radius: 3px;
-  // background-color: #fff;
-  // transition: 1.3s all;
   transition: opacity var(--transition-dur-and-timing-fun);
   -webkit-transition: opacity var(--transition-dur-and-timing-fun);
   -moz-transition: opacity var(--transition-dur-and-timing-fun);
@@ -162,13 +156,16 @@
   flex-direction: column;
 }
 
-
-.modal-send-form-input{
+.modal-send-form-input,
+.modal-send-form-textarea {
   font-family: 'Montserrat';
     // font-style: normal;
     // font-weight: 400;
   font-size: 14px;
-  line-height: 1.4;  
-  
+  line-height: 1.4;   
   color: #131313;
+
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84A178;
+  border-radius: 10px;
 }
