--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -27,8 +27,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  column-gap: 32px;
-  row-gap: 5px;
+  margin-top: 106px;
+  gap: 100px 32px;
+
 }
 
 .modal-products-item {
@@ -42,85 +43,42 @@
 }
 
 
-.modal-img-container{
-  position: relative;
-  top: -1px;
+.prod-card .modal-img-container{
+  position: absolute;
+  top: -96px;  
 }
 
-.modal-product-1 {
-
+.modal-product-1,
+.modal-product-2,
+.modal-product-3 {
   // position: relative;
   // bottom: -1px;
+  width: 128px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
 
   padding: 20px 0;
-  height: 85px;
-  
+  height: 85px; 
+
+  border-radius: 15px;
 }
 
-// .send-form-label-wrapper {
-//   display: block;
-//   position: relative;
-//   margin-top: 4px;
-// }
-
-
-// .send-form-checkbox {
-// //  position: relative;
-//   margin: 0;
-//   margin-top: 86px;
-//   padding: 0;
-// }
-
-// .modal-img-container{
-//   position: relative;
-  
-// }
-
-// .modal-products{
-//   display: flex;
-//   flex-direction: column;
-//   // line-height: 0;
-//   // width: 1px;
-// }
-
-// .modal-img-container {
-//   position: fixed;
-//   // margin: 0;
-//   margin: -66px auto 0 auto;
-//   // top: 20px;
-//   // left: auto;
-// }
-
-// .modal-product {
-//   position: fixed;
-//   margin: -66px auto 0 auto;
-// }
-
-// .modal-product1, .modal-product2, .modal-product3 {
-//   // margin: 93px auto 0 auto;
-//   margin: auto;
-//   width: 132px;
-//   // padding: 86px 16px 20px 16px;
-//   // height: 136px;
-//   border-radius: 15px;
-// }
 
 .modal-product-1 {
-  background-color: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
-  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+  border: 2px solid #96AF8C;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));  
 }
 
 .modal-product-2 {
-  background-color: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+  background: #EFD478;
+  border: 2px solid #EFD478;
+  box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
 }
 
 .modal-product-3 {
-  background-color: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
-  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+  border: 2px solid #D6936D;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
 }
 
 .modal-product-name{
@@ -137,4 +95,28 @@
   text-transform: uppercase;
   
   color: #131313;
+}
+
+.modal-products {
+  @media screen and (max-width: 767.99px) {
+    margin-bottom: 31px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+  }
+}
+
+.modal-send-form-input,
+.modal-send-form-textarea {
+  font-family: 'Montserrat';
+  // font-style: normal;
+  // font-weight: 400;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #131313;
+
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84A178;
+  border-radius: 10px;
 }
