--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -20,12 +20,12 @@
 
    <!--Form modal -->
   <h2 class="visually-hidden">Order form</h2>
-  <form class="modal-send-form">
-    <label class="modal-send-form-label">
+  <form class="modal-franchise-form">
+    <label class="modal-franchise-form-label">
       <input
         type="text"
         name="user_name"
-        class="modal-send-form-input"
+        class="modal-franchise-form-input"
         required
         pattern="^[a-zA-Zа-яА-Я]+$"
         minlength="2"
@@ -33,27 +33,27 @@
         placeholder="Name"
       />
     </label>
-    <label class="modal-send-form-label">
+    <label class="modal-franchise-form-label">
       <input
         type="tel"
         name="user_phone"
-        class="modal-send-form-input"
+        class="modal-franchise-form-input"
         required
         pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
         title="Input format: xxx-xxx-xx-xx"
         placeholder="Phone"
       />
     </label>
-    <label class="modal-send-form-label">
+    <label class="modal-franchise-form-label">
       <input
         type="email"
         name="user_email"
-        class="modal-send-form-input"
+        class="modal-franchise-form-input"
         title="mail@example.com"
         placeholder="Email"
       />
     </label>
-    <label class="modal-send-form-label">
+    <label class="modal-franchise-form-label">
       <textarea
         name="user_comment"
         class="modal-form-textarea"
