--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
 <!--MODAL FRANCHISE-->
 
 <div class="modal modal-franchise" data-modal="5">
-  <button type="button" class="modal-close-btn js-modal-close">
+  <button type="button" class="btn-close-franchise js-modal-close">
     <svg class="modal-close-btn-icon">
       <use href="./images/sprite.svg#icon-close-line"></use>
     </svg>
@@ -18,7 +18,7 @@
     We appreciate your patience.
   </p>
 
-   <!--Form modal -->
+  <!--Form modal -->
   <h2 class="visually-hidden">Order form</h2>
   <form class="modal-franchise-form">
     <label class="modal-franchise-form-label">
