--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -67,7 +67,7 @@
 }
 
 
-.modal-close-btn {
+.btn-close-franchise {
     position: absolute;
     top: 12px;
     right: 12px;
@@ -81,17 +81,25 @@
     cursor: pointer;
     background-color: #fcfcfc;
     border: 0;
-
-    @media screen and (max-width: 767px) {
-        width: 20px;
-        height: 20px;
-    }
-
-    @media screen and (min-width: 768px) {
-        width: 24px;
-        height: 24px;
-    }
 }
+
+
+ @media screen and (max-width: 767px) {
+    .btn-close-franchise{
+     width: 20px;
+      height: 20px;
+}
+}
+       
+
+@media screen and (min-width: 768px) {
+.btn-close-franchise {
+ width: 24px;
+height: 24px;
+}
+    
+}
+
 
 .modal-franchise-title {
     font-family: 'Seymour One';
@@ -180,7 +188,7 @@
 
 
 .modal-franchise-form-input {
-    width: 100%;
+    width: 224px;
     height: 32px;
     font-family: var(--primary-font);
     font-size: 12px;
@@ -203,7 +211,7 @@
 }
 
 .modal-form-textarea {
-    width: 100%;
+    width: 224px;
     height: 64px;
     font-family: var(--primary-font);
     font-size: 12px;
