--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
 
 <div class="modal modal-franchise" data-modal="5">
   <button type="button" class="btn-close-franchise js-modal-close">
-    <svg class="modal-close-btn-icon">
+    <svg>
       <use href="./images/sprite.svg#icon-close-line"></use>
     </svg>
   </button>
