--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -55,7 +55,7 @@
 
 @media screen and (min-width: 768px) {
     .modal-franchise {
-        max-width: 568px;
+        width: 568px;
         padding: 32px 60px;
     }
 }
