customer-swiper-slide

--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,4 +1,4 @@
-    .ustomer-rewiews-visual-hidden {
+    .сustomer-rewiews-visual-hidden {
         position: absolute;
         white-space: nowrap;
         width: 1px;
@@ -11,8 +11,12 @@
         margin: -1px;
     }
 
+        .customer-swiper-slide {
+            flex-direction: column;
+        }
+
         .customer-rewiews{
-        background-image: url("./images/background/mob-bg-@1x-581.jpg");
+        background-image: url("../images/background/mob-bg-@1x-581.jpg");
         min-Width: 320px;
         min-Height: 1037px;
         margin-left: auto;
@@ -97,7 +101,7 @@
 screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .customer-rewiews {
-        background-image: url("./images/background/mob-bg-@2x-1770.jpg");
+        background-image: url("../images/background/mob-bg-@2x-1770.jpg");
     }
 }
 
@@ -105,7 +109,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .customer-rewiews{
-        background-image: url("./images/background/tab-bg-@2x-1926.jpg");
+        background-image: url("../images/background/tab-bg-@2x-1926.jpg");
     }
 }
 
@@ -113,6 +117,6 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
 screen and (min-resolution: 192dpi) and (min-width: 1200px),
 screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     .customer-rewiews {
-        background-image: url("./images/background/desk-bg-@2x-2600.jpg");
+        background-image: url("../images/background/desk-bg-@2x-2600.jpg");
     }
 }
