--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -5,7 +5,7 @@
         <h2 class="customer-rewiews-visual-hidden">customer rewiews</h2>
         <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
-                <div class="swiper-slide review">
+                <div class="swiper-slide customer-swiper-slide review">
                     <img class="customer" srcset="
                                                 ./images/reviews/review-1-@1x-85.jpg 85w,
                                                 ./images/reviews/review-1-@2x-170.jpg 170w"
@@ -18,7 +18,7 @@
                     </p>
                     <h3 class="cusomer-name">Emily, Los Angeles</h3>
                 </div>
-                <div class="swiper-slide review">
+                <div class="swiper-slide customer-swiper-slide review">
                     <img class="customer" srcset="
                                                 ./images/reviews/review-2-@1x-85.jpg 85w,
                                                 ./images/reviews/review-2-@2x-170.jpg 170w"
@@ -30,7 +30,7 @@
                     </p>
                     <h3 class="cusomer-name">Bryan, New-York</h3>
                 </div>
-                <div class="swiper-slide review">
+                <div class="swiper-slide customer-swiper-slide review">
                     <img class="customer" srcset="
                                                 ./images/reviews/review-3-@1x-85.jpg 85w,
                                                 ./images/reviews/review-3-@2x-170.jpg 170w"
