--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -22,7 +22,7 @@
     //     background-repeat: no-repeat;
     // }
 
-    .swiper {
+    .gallery-swiper {
         width: 100%;
         height: 100%;
         border-radius: 25px;
