--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -11,8 +11,7 @@
                                                 ./images/reviews/review-1-@2x-170.jpg 170w"
                         src="./images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
                     <p class="review-text">
-                        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition,
-                        you have beautiful
+                        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful
                         serving, cozy atmosphere and polite staff.
 
                     </p>
