gallery внутрь отзывов

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,8 +1,8 @@
 
 
 <section class="customer-rewiews">
-    <div class="container">
-        <h2 class="customer-rewiews-visual-hidden">customer rewiews</h2>
+    <div class="container container-customer-rewiews">
+        <h2 class="сustomer-rewiews-visual-hidden ">customer rewiews</h2>
         <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
                 <div class="swiper-slide customer-swiper-slide review">
