--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -1,90 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Seymour+One&display=swap"
-      rel="stylesheet"
-    />
-    <title>Franchise modal</title>
-  </head>
-  <body>
-    <div class="modal container" data-modal="5">
-      <button type="button" class="modal-close-btn js-modal-close">
-        <svg class="modal-close-btn-icon">
-          <use href="./images/sprite.svg#icon-close-line"></use>
-        </svg>
-      </button>
+<!--MODAL FRANCHISE-->
 
-      <h1 class="modal-title">
-        Thank you for your interest in owning an Ice Cream shop
-      </h1>
-      <p class="modal-franchise-text">
-        Due to the overwhelming volume of franchise requests we are not
-        accepting new franchisee applications at this time. Once the application
-        process resumes, we will contact you for further information. Please
-        fill out the contact information below and we will reach out for
-        additional information. We appreciate your patience.
-      </p>
+<div class="modal modal-franchise" data-modal="5">
+  <button type="button" class="btn-close-franchise js-modal-close">
+    <svg>
+      <use href="./images/sprite.svg#icon-close-line"></use>
+    </svg>
+  </button>
 
-      <!-- Form modal -->
-      <h2 class="visually-hidden">Order form</h2>
-      <form class="modal-send-form">
-        <label class="modal-send-form-label">
-          <span class="modal-send-form-label-wrapper">
-            <input
-              type="text"
-              name="user_name"
-              class="modal-send-form-input"
-              required
-              pattern="^[a-zA-Zа-яА-Я]+$"
-              minlength="2"
-              title="Supported characters: A-Z, a-z, A-Z, А-Я, а-я]"
-              placeholder="Name"
-            />
-          </span>
-        </label>
-        <label class="modal-send-form-label">
-          <span class="modal-send-form-label-wrapper">
-            <input
-              type="tel"
-              name="user_phone"
-              class="modal-send-form-input"
-              required
-              pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
-              title="Input format: xxx-xxx-xx-xx"
-              placeholder="Phone"
-            />
-          </span>
-        </label>
-        <label class="modal-send-form-label">
-          <span class="modal-send-form-label-wrapper">
-            <input
-              type="email"
-              name="user_email"
-              class="modal-send-form-input"
-              title="mail@example.com"
-              placeholder="Email"
-            />
-          </span>
-        </label>
-        <label class="modal-send-form-label">
-          <textarea
-            name="user_comment"
-            class="modal-send-form-textarea"
-            placeholder="Comment"
-          ></textarea>
-        </label>
+  <h1 class="modal-franchise-title">
+    Thank you for your interest in owning an Ice Cream shop
+  </h1>
+  <p class="modal-franchise-text">
+    Due to the overwhelming volume of franchise requests we are not accepting
+    new franchisee applications at this time. Once the application process
+    resumes, we will contact you for further information. Please fill out the
+    contact information below and we will reach out for additional information.
+    We appreciate your patience.
+  </p>
 
-        <button type="submit" class="modal-submit-button">Submit</button>
-      </form>
-    </div>
+  <!--Form modal -->
+  <h2 class="visually-hidden">Order form</h2>
+  <form class="modal-franchise-form">
+    <label class="modal-franchise-form-label">
+      <input
+        type="text"
+        name="user_name"
+        class="modal-franchise-form-input"
+        required
+        pattern="^[a-zA-Zа-яА-Я]+$"
+        minlength="2"
+        title="Supported characters: A-Z, a-z, A-Z, А-Я, а-я]"
+        placeholder="Name"
+      />
+    </label>
+    <label class="modal-franchise-form-label">
+      <input
+        type="tel"
+        name="user_phone"
+        class="modal-franchise-form-input"
+        required
+        pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
+        title="Input format: xxx-xxx-xx-xx"
+        placeholder="Phone"
+      />
+    </label>
+    <label class="modal-franchise-form-label">
+      <input
+        type="email"
+        name="user_email"
+        class="modal-franchise-form-input"
+        title="mail@example.com"
+        placeholder="Email"
+      />
+    </label>
+    <label class="modal-franchise-form-label">
+      <textarea
+        name="user_comment"
+        class="modal-form-textarea"
+        placeholder="Comment"
+      ></textarea>
+    </label>
 
-    <!-- Overlay modal window -->
-    <div class="overlay js-overlay-modal"></div>
-  </body>
-</html>
+    <button type="submit" class="btn-franchise">Submit</button>
+  </form>
+</div>
+<div class="overlay js-overlay-modal"></div>
