--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -10,11 +10,12 @@
                                                 ./images/reviews/review-1-@1x-85.jpg 85w,
                                                 ./images/reviews/review-1-@2x-170.jpg 170w"
                         src="./images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
-                    <p class="review-text">
+                    <div class="review-text">
+                        <p>
                         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful
                         serving, cozy atmosphere and polite staff.
-
                     </p>
+                    </div>
                     <h3 class="cusomer-name">Emily, Los Angeles</h3>
                 </div>
                 <div class="swiper-slide customer-swiper-slide review">
@@ -22,11 +23,13 @@
                                                 ./images/reviews/review-2-@1x-85.jpg 85w,
                                                 ./images/reviews/review-2-@2x-170.jpg 170w"
                         src="./images/reviews/review-1-@1x-85.jpg" alt="Bryan, New-York">
-                    <p class="review-text">
+                        <div class="review-text">
+                        <p>
                         It's freshly made ice cream. The best place to have ice cream in Chicago.
                         The quality is good and worth its price .
                         Hope the price don't increase
                     </p>
+                    </div>
                     <h3 class="cusomer-name">Bryan, New-York</h3>
                 </div>
                 <div class="swiper-slide customer-swiper-slide review">
@@ -34,11 +37,13 @@
                                                 ./images/reviews/review-3-@1x-85.jpg 85w,
                                                 ./images/reviews/review-3-@2x-170.jpg 170w"
                         src="./images/reviews/review-1-@1x-85.jpg" alt="Diana, Chicago">
-                    <p class="review-text">
+                        <div class="review-text">
+                        <p>
                         Ice cream is my passion! I love your chocolate hazelnut ice cream!
                         And I really like the excellent service - always
                         served politely and quickly!
                     </p>
+                    </div>
                     <h3 class="cusomer-name">Diana, Chicago</h3>
                 </div>
             </div>
