--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -37,7 +37,7 @@
     }
 
     .review {
-        padding-top: 80px;
+        padding-top: 174px;
         align-items: center;
     }
 
@@ -46,7 +46,7 @@
         margin-bottom: 0px;
         padding: 35px 39px;
         width: 202px;
-        max-height: 186px;
+        height: 186px;
 
         background-color: #84A178;
         margin-left: auto;
@@ -60,6 +60,8 @@
         color: #FCFCFC;
         border-radius: 10px;
         text-align: center;
+        letter-spacing: .02em;
+
     }
 
     .cusomer-name {
@@ -79,17 +81,44 @@
         background-color: #84A178;
     }
 
+        @media screen and (min-width: 480px) {
+        .review {
+                padding-top: 236px;
+            }
+}
+
+        @media screen and (min-width: 768px) {
+    
+            .review-text {
+                padding: 28px 80px;
+                width: 545px;
+                height: 81px;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 1.86;
+                letter-spacing: .04em;
+            }
+    
+            .review {
+                padding-top: 283px;
+            }
+    
+            .cusomer-name {
+                margin-bottom: 50px;
+            }
+        }
+
 
     @media screen and (min-width: 1200px) {
 
         .review-text {
             padding: 43px 109px;
             width: 750px;
-            max-height: 52px;
+            height: 52px;
         }
 
         .review {
-            padding-top: 100px;
+            padding-top: 464px;
         }
 
         .cusomer-name {
@@ -97,11 +126,17 @@
         }
     }
 
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 480px) {
+    .container-customer-rewiews {
+        background-image: url("../images/background/mob-bg-@1x-885.jpg");
+    }
+}
+
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
 screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .container-customer-rewiews {
-        background-image: url("../images/background/mob-bg-@2x-1770.jpg");
+        background-image: url("../images/background/mob-bg-@2x-1162.jpg");
     }
 }
 
