--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -55,7 +55,8 @@
 
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script>
+-->
+  <!-- <script>
     var swiper = new Swiper(".mySwiper2", {
         slidesPerView: 1,
         spaceBetween: 30,
@@ -71,4 +72,4 @@
             prevEl: ".swiper-button-prev",
         },
     });
-</script> -->
+</script>  -->
