--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,12 +1,12 @@
 <h2 class="visibility-hidden">Customer reviews</h2>
 
-<div class="gallery-reviews-wrapper">
-  <ul class="">
-    <div class="swiper mySwiper1">
+<div class="gallery-reviews-wrapper reviews">
+  <ul class="reviews-list">
+    <div class="swiper mySwiper2">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-item">
             <li class="reviews-item">
-                <picture>
+                <picture class="">
                   <source
                     media="(min-width: 320px)"
                     srcset="
@@ -39,7 +39,7 @@
                 <h3 class="reviews-name">Emily, Los Angeles</h3>
               </li>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-item">
             <li class="reviews-item">
                 <picture>
                   <source
@@ -73,7 +73,7 @@
                 <h3 class="reviews-name">Bryan, New-York</h3>
               </li>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide reviews-item">
             <li class="reviews-item">
                 <picture>
                   <source
