--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -147,9 +147,19 @@
   }
 }
 .swiper {
-  width: 100%;
-  height: 100%;
-  border-radius: 25px;
+  // width: 100%;
+  // height: 100%;
+  // border-radius: 25px;
+  max-width: 100%;
+  transform: translateY(-32px);
+
+  @media screen and (min-width: 768px) {
+    transform: translateY(-144px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    transform: translateY(-98px);
+  }
 }
 .swiper-slide {
   background-position: center;
