--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class=id"advantages">
+<section class="advantages" id="advantages">
   <!-- <div class="container"> -->
   <h2 class="visibility-hidden">Advantages</h2>
   <ul class="adv-list-cow">
