--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -53,6 +53,10 @@
   color: #fcfcfc;
 }
 
+.adv-figure:hover {
+  transform: scale(1.3);
+}
+
 .adv-item-cow::before {
   content: '';
   width: 50px;
