--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="section-contacts">
   <div class="container for-contacts">
-    <h2 class="visually-hidden">Contacts</h2>
+    <h2 class="visually-hidden" id="contacts">Contacts</h2>
     <ul class="list-contacts">
       <li class="info-contacts">
         <p class="categories-contacts">CAFE</p>
