--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="products">
     <div class="container products-container">
 <p class="products-natural">100% natural</p>
-<h2 class="products-title">products</h2>
+<h2 class="products-title" id="products">products</h2>
 
 <ul class="products-list">
     <div class="products-list-box">
