--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,13 +11,13 @@
           <a href="#home" class="header-nav-link link">Home</a>
         </li>
         <li class="header-item">
-          <a href="#" class="header-nav-link link">How it’s made?</a>
+          <a href="#about" class="header-nav-link link">How it’s made?</a>
         </li>
         <li class="header-item">
-          <a href="#" class="header-nav-link link">Our products</a>
+          <a href="#products" class="header-nav-link link">Our products</a>
         </li>
         <li class="header-item">
-          <a href="#" class="header-nav-link link">Contact</a>
+          <a href="#contacts" class="header-nav-link link">Contact</a>
         </li>
       </ul>
     </nav>
