add header hero id

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,8 +13,8 @@
           <p class="hero-text-info">food trucks</p>
         </li>
       </ul>
-      <a href="" class="hero-btn-products">Products</a>
-      <a href="" class="hero-btn-how">How it’s made?</a>
+      <a href="#products" class="hero-btn-products">Products</a>
+      <a href="#about" class="hero-btn-how">How it’s made?</a>
       <p class="hero-article">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et
