переробив джс класи

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <!--Бургер меню-->
-    <button type="button" class="header-mobile-menu-open js-open-menu">
+    <button type="button" class="header-mobile-menu-open js-open-modal "data-modal="7">
       <svg class="header-mobile-menu-open-ikon" width="32" height="32">
         <use href="./images/sprite.svg#icon-menu-fill"></use>
       </svg>
@@ -34,9 +34,9 @@
       </svg>
     </button>
   </div>
-  <div class="header-mobile-menu js-menu-container">
+  <div class="header-mobile-menu js-menu-container modal" data-modal="7">
     <div class="container header-mobile-menu-container">
-      <button class="header-mobile-menu-close-btn js-close-menu">
+      <button class="header-mobile-menu-close-btn js-modal-close">
         <svg class="header-mobile-menu-close-icon" width="32" height="32">
           <use href="./images/sprite.svg#icon-close-line"></use>
         </svg>
