--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,12 +1,12 @@
 .reviews {
-  padding-bottom: 393px;
+  // padding-bottom: 393px;
 
   @media screen and (min-width: 768px) {
-    padding-bottom: 379px;
+    // padding-bottom: 379px;
   }
 
   @media screen and (min-width: 1200px) {
-    padding-bottom: 228px;
+    // padding-bottom: 228px;
   }
 }
 .reviews-item {
