--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -12,38 +12,38 @@
   margin: -1px;
 }
 
-.gallery-reviews-wrapper {
-  background-image: url('../images/background/mob-bg-@1x-581.jpg');
+.gallery-review-wrapper {
+  // background-image: url('../images/background/mob-bg-@1x-581.jpg');
   background-repeat: repeat;
   background-size: 581px;
   background-position: -125px -5px;
 }
 @supports (background-image: url('data:image/webp')) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/mob-bg-@1x-581.webp');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/mob-bg-@1x-581.webp');
   }
 }
 @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/mob-bg-@2x-1162.jpg');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/mob-bg-@2x-1162.jpg');
   }
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/mob-bg-@2x-1162.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/mob-bg-@2x-1162.webp');
     }
   }
 }
 @media screen and (min-width: 480px) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/mob-bg-@1x-885.jpg');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/mob-bg-@1x-885.jpg');
     background-size: 885px;
   }
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/mob-bg-@1x-885.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/mob-bg-@1x-885.webp');
     }
   }
 }
@@ -51,24 +51,24 @@
   screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 480px) and (min-resolution: 192dpi),
   screen and (min-width: 480px) and (min-resolution: 2dppx) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/mob-bg-@2x-1770.jpg');
-  }
+  // .gallery-review-wrapper {
+  //   background-image: url('../images/background/mob-bg-@2x-1770.jpg');
+  //}
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/mob-bg-@2x-1770.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/mob-bg-@2x-1770.webp');
     }
   }
 }
 @media screen and (min-width: 768px) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/tab-bg-@1x-963.jpg');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/tab-bg-@1x-963.jpg');
     background-position: -35px -5px;
     background-size: 963px;
   }
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/tab-bg-@1x-963.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/tab-bg-@1x-963.webp');
     }
   }
 }
@@ -76,24 +76,24 @@
   screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 768px) and (min-resolution: 192dpi),
   screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/tab-bg-@2x-1926.jpg');
-  }
-  @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/tab-bg-@2x-1926.webp');
-    }
+  // .gallery-review-wrapper {
+  //   background-image: url('../images/background/tab-bg-@2x-1926.jpg');
+}
+@supports (background-image: url('data:image/webp')) {
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/tab-bg-@2x-1926.webp');
+    // }
   }
 }
 @media screen and (min-width: 1200px) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/desk-bg-@1x-1300.jpg');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/desk-bg-@1x-1300.jpg');
     background-position: -70px -255px;
     background-size: 1300px;
   }
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/desk-bg-@1x-1300.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/desk-bg-@1x-1300.webp');
     }
   }
 }
@@ -101,12 +101,12 @@
   screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 1200px) and (min-resolution: 192dpi),
   screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .gallery-reviews-wrapper {
-    background-image: url('../images/background/desk-bg-@2x-2600.jpg');
+  .gallery-review-wrapper {
+    // background-image: url('../images/background/desk-bg-@2x-2600.jpg');
   }
   @supports (background-image: url('data:image/webp')) {
-    .gallery-reviews-wrapper {
-      background-image: url('../images/background/desk-bg-@2x-2600.webp');
+    .gallery-review-wrapper {
+      // background-image: url('../images/background/desk-bg-@2x-2600.webp');
     }
   }
 }
